--- a/html/formulario.html
+++ b/html/formulario.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h2>Formulario UCE</h2>
+        <h2 id="tit">Formulario UCE</h2>
     </header>
     <section>
         <table>
