--- a/html/paginaindexable.html
+++ b/html/paginaindexable.html
@@ -12,7 +12,7 @@
         <h1>Mi primera Página</h1>
         <h6>Mi segunda página</h6>
     </header>
-    <nav>
+    <nav class="">
         <ul>
             <li>Carros</li>
             <li>Ventas</li>
