--- a/html/calculadora.html
+++ b/html/calculadora.html
@@ -5,6 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Test</title>
+
+    <script>
+        function sumarNumero(primera, segunda) {
+            var n1 = parseInt(primera)
+            var n2 = parseInt(segunda)
+            console.log('Funcion sumar' + n1);
+            console.log("Funcion sumada" + n2);
+            var resultado = n1 + n2
+            console.log(resultado);
+            document.getElementById('1dResultado2').innerText = resultado
+            return resultado;
+        }
+
+        function restar(primero, segundo) {
+            return primero - segundo;
+        }
+
+        function sumarNumeroCompleto() {
+            var n1 = parseInt(document.getElementById('idNumero1').value)
+            var n2 = parseInt(document.getElementById('idNumero2').value)
+            console.log('Funcion sumar' + n1);
+            console.log("Funcion sumada" + n2);
+            var resultado = n1 + n2
+            console.log(resultado);
+            document.getElementById('1dResultado2').innerText = resultado
+            return resultado;
+        }
+    </script>
 </head>
 
 <body>
@@ -21,23 +49,32 @@
         <button onclick="document.getElementById('idNumero2').style.background = 'yellow' ">Cambiar Estilo 2</button>
         <button onclick="document.getElementById('res').innerHTML = 1+6">Presentar Resultado</button>
         <label id="res" for=""></label>
-        
+
         <button onclick="document.getElementById('idDiv').innerHTML = '<button>Hola</button>'">Agregar Elemento</button>
         <div id="idDiv">
             <!-- <button>Hola</button> -->
         </div>
         <div>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/DOM-model.svg/1200px-DOM-model.svg.png"
-                alt="DOM html" style="height: 100px; width:100px;" 
-                id="img1"
-                />
+                alt="DOM html" style="height: 100px; width:100px;" id="img1" />
 
-            <button onclick="document.getElementById('img1').src = 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/2023_Obsidian_logo.svg/1200px-2023_Obsidian_logo.svg.png' ">Cambiar imagen</button>
+            <button
+                onclick="document.getElementById('img1').src = 'https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/2023_Obsidian_logo.svg/1200px-2023_Obsidian_logo.svg.png' ">Cambiar
+                imagen</button>
+
 
 
         </div>
 
+        <h2>JS Interno</h2>
+        <button
+            onclick="sumarNumero(document.getElementById('idNumero1').value, document.getElementById('idNumero2').value)">SUMAR
+            Incompleto</button>
+        <button onclick="sumarNumero()">SUMAR Completo</button>
+        <label id="idResultado2" for=""></label>
+
     </section>
     <footer>Todos los derechos reservados</footer>
 </body>
+
 </html>
