--- a/html/estudianteForm.html
+++ b/html/estudianteForm.html
@@ -17,10 +17,10 @@
         <form class="form" action="https://mi.api/estudiantes" method="POST">
           <h2>Nuevo Estudiante</h2>
           <p type="Nombre: ">
-            <input type="text" />
+            <input type="text" placeholder="&#9824" />
           </p>
           <p type="Apellido: ">
-            <input type="text" />
+            <input type="text" placeholder="&#9898"/>
           </p>
           <p type="Edad: ">
             <input type="number" />
