calc final con js

--- a/html/calcFin.html
+++ b/html/calcFin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calc</title>
     <link rel="stylesheet" href="../css/calcFinal.css" />
+    <script src="../js/calcTarea.js"></script>
   </head>
   <body>
     <header></header>
@@ -13,28 +14,27 @@
     <section>
       <div class="container">
         <div class="calculadora">
-            <div class="screen">
+            <div id="idRes" class="screen">
                 Resultado
             </div>
-            <button>C</button>
-            <button>&#8592</button>
-            <button>%</button>
-            <button>/</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>X</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
+            <button onclick="limpiar()" class="span2">C</button>
+            <button onclick="quitar()">&#8592</button>
+            <button onclick="agregarSigno('/')">/</button>
+            <button onclick="agregarNumero(7)">7</button>
+            <button onclick="agregarNumero(8)">8</button>
+            <button onclick="agregarNumero(9)">9</button>
+            <button onclick="agregarSigno('*')">X</button>
+            <button onclick="agregarNumero(4)">4</button>
+            <button onclick="agregarNumero(5)">5</button>
+            <button onclick="agregarNumero(6)">6</button>
+            <button onclick="agregarSigno('-')">-</button>
+            <button onclick="agregarNumero(1)">1</button>
+            <button onclick="agregarNumero(2)">2</button>
+            <button onclick="agregarNumero(3)">3</button>
+            <button onclick="agregarSigno('+')">+</button>
+            <button class="span2">0</button>
+            <button onclick="agregarSigno('.')">.</button>
+            <button onclick="resultado()">=</button>
         </div>
       </div>
     </section>
