--- a/html/paginaVue.html
+++ b/html/paginaVue.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vue con CDN</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   </head>
   <body>
     <header></header>
     <nav></nav>
     <section>
-      <p>{{false ? 'Verdadero' : 'Falso'}}</p>
+      <!-- <p>{{false ? 'Verdadero' : 'Falso'}}</p> -->
       <div id="myApp">
-        <h1>Hola Mundo</h1>
-        <p>Vue.js con CDN</p>
-        <h1>{{1+1}}</h1>
+        <h1>Propiedades Reactivas</h1>
+        <!-- <p>Vue.js con CDN</p> -->
+        <!-- <h1>{{1+1}}</h1>
         <p>{{[1,2,3,4,5,6,7,8]}}</p>
-        <p>{{false ? 'Verdadero' : 'Falso'}}</p>
+        <p>{{false ? 'Verdadero' : 'Falso'}}</p> -->
+        <p>{{mensaje}}</p>
+        <p>{{valor}}</p>
+        <button v-on:click="cambiar">Cambiar Mensaje</button>
+        <button v-on:click="sumar">Sumar</button>
       </div>
-      <h1>{{1+1}}</h1>
+      <!-- <h1>{{1+1}}</h1> -->
       <script src="../js/app.js"></script>
     </section>
     <footer></footer>
